Update doc base path
